--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.14.0",
-    "font-awesome": "^4.7.0",
-    "jasmine-core": ">=2.5.2"
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
+    "express": "^4.14.0",
+    "jasmine-core": ">=2.8.0",  
     "@types/jasmine": ">=2.5.40",
     "@types/node": "^6.0.58",
     "gulp": "^3.9.1",
@@ -21,9 +21,9 @@
     "gulp-sourcemaps": "^2.4.0",
     "gulp-typescript": "^3.1.3",
     "gulp-watch": "^4.3.11",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.1.0",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
     "marked": "^0.3.6",
     "mkdirp": "^0.5.1",
     "nunjucks": "^3.0.1",
@@ -33,7 +33,9 @@
     "webcomponentsjs": "^1.0.2"
   },
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "karma start karma.conf.js",
+    "build": "gulp",
+    "start": "node build/server.js"
   },
   "repository": {
     "type": "git",
