--- a/package.json
+++ b/package.json
@@ -4,32 +4,39 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "lit-html": "^0.9.0"
   },
+  "files": [
+    "README.md",
+    "modules/arrivalPie/*"
+  ],
   "devDependencies": {
-    "express": "^4.14.0",
-    "jasmine-core": ">=2.8.0",  
-    "@types/jasmine": ">=2.5.40",
+    "@types/jasmine": ">=2.8.6",
     "@types/node": "^6.0.58",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-debug": "^3.1.0",
     "gulp-nunjucks-render": "^2.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^8.0.0",
     "gulp-rev-replace": "^0.4.3",
     "gulp-rimraf": "^0.2.1",
     "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.4.0",
-    "gulp-typescript": "^3.1.3",
+    "gulp-typescript": ">=4.0.2",
     "gulp-watch": "^4.3.11",
+    "jasmine-core": ">=3.1.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.1",
+    "karma-jasmine": "^1.1.2",
     "marked": "^0.3.6",
+    "merge2": "^1.2.1",
     "mkdirp": "^0.5.1",
     "nunjucks": "^3.0.1",
     "nunjucks-markdown": "^2.0.1",
     "ts-custom-elements": "^1.0.0",
-    "typescript": "^2.6.2",
+    "typescript": ">=2.8.1",
     "webcomponentsjs": "^1.0.2"
   },
   "scripts": {
