--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "typescript": ">=2.8.1",
     "webcomponentsjs": "^1.0.2"
   },
+  "bin": {
+    "little-server": "./bin/little-server.js"
+  },
   "scripts": {
     "test": "karma start karma.conf.js",
     "build": "gulp",
-    "start": "node build/server.js"
+    "start": "node bin/little-server.js"
   },
   "repository": {
     "type": "git",
