fix(gitignore): everything busted
was leaving out a lot of files due to lib/ rule
in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,9 @@
 *log
 *tar
 *tgz
-3rdParty/
-web/resources/img/glyphicons/
-bin/
-build/
-dist/
-lib/
-maps/
-nbproject/private
-node_modules/
+/bin/
+/dist/
+/lib/
+/maps/
+/node_modules/
 trash/
