fix(gulpHelper): take in gulp ref

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "files": [
     "README.md",
     "lib/*",
-    "bin/*"
+    "bin/*",
+    "gulpHelper.js"
   ],
   "devDependencies": {
     "@types/jasmine": ">=2.8.6",
