--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@littleware/little-elements",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "dependencies": {
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jasmine": ">=2.8.6",
     "@types/node": "^6.0.58",
+    "@webcomponents/webcomponentsjs": "^2.1.3",
     "express": ">=4.16.3",
     "gulp": "^4.0.0",
     "gulp-debug": "^3.1.0",
