--- a/package.json
+++ b/package.json
@@ -15,32 +15,32 @@
     "gulpHelper.js"
   ],
   "devDependencies": {
-    "@types/jasmine": ">=2.8.6",
-    "@types/node": "^6.0.58",
-    "@webcomponents/webcomponentsjs": "^2.1.3",
-    "express": ">=4.16.3",
-    "gulp": "^4.0.0",
+    "@types/jasmine": "^3.4.0",
+    "@types/node": "^6.14.7",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "express": "^4.17.1",
+    "gulp": "^4.0.2",
     "gulp-debug": "^3.1.0",
     "gulp-nunjucks-render": "^2.2.3",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.4.0",
     "gulp-rev": "^8.0.0",
     "gulp-rev-replace": "^0.4.3",
     "gulp-rimraf": "^0.2.1",
     "gulp-sequence": "^0.4.6",
-    "gulp-sourcemaps": "^2.4.0",
-    "gulp-typescript": ">=4.0.2",
-    "gulp-watch": "^4.3.11",
-    "jasmine-core": ">=3.1.0",
-    "karma": ">=2.0.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-typescript": "^5.0.1",
+    "gulp-watch": "^5.0.1",
+    "jasmine-core": "^3.4.0",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^2.0.1",
     "marked": "^0.7.0",
-    "merge2": "^1.2.1",
+    "merge2": "^1.3.0",
     "mkdirp": "^0.5.1",
     "nunjucks": "^3.0.1",
     "nunjucks-markdown": "^2.0.1",
     "ts-custom-elements": "^1.0.0",
-    "typescript": ">=3.6.2"
+    "typescript": "^3.6.3"
   },
   "bin": {
     "little-server": "./commonjs/bin/little-server.js"
