--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,9 @@ phases:
       - npm audit --audit-level=high
       - npm run test
       - zip -r bundle .
+      # publish on tag events - see https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
+      - "[ \"$(echo \"$CODEBUILD_WEBHOOK_TRIGGER\" | awk -F / '{ print $1 }')\" = \"tag\" ] && npm publish . --tag cicd"
+
 artifacts:
   files:
      - './bundle.zip'
