--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@littleware/little-elements",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "dependencies": {
@@ -10,7 +10,7 @@
   "files": [
     "README.md",
     "web/*",
-    "commons/*",
+    "commonjs/*",
     "site/*",
     "gulpHelper.js"
   ],
