--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,6 @@ phases:
   post_build:
     commands:
       - git checkout -b "cicd-$CODEBUILD_WEBHOOK_TRIGGER"
-      - bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/bin/arun.sh" lambda publish "$CODEBUILD_SRC_DIR"
+      - bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/bin/arun.sh" lambda upload "$CODEBUILD_SRC_DIR"
       # publish on tag events - see https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
       - "if [ \"$(echo \"$CODEBUILD_WEBHOOK_TRIGGER\" | awk -F / '{ print $1 }')\" = \"tag\" ]; then npm publish . --tag cicd; fi"
