--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,11 +21,14 @@ phases:
   build:
     commands:
       - npm run build
+      - npm run lint
       - npm audit --audit-level=high
       - npm run test
   post_build:
     commands:
       - git checkout -b "cicd-$CODEBUILD_WEBHOOK_TRIGGER"
-      - bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/bin/arun.sh" lambda update "$CODEBUILD_SRC_DIR"
+      - BUILD_TYPE="$(echo \"$CODEBUILD_WEBHOOK_TRIGGER\" | awk -F / '{ print $1 }')"
+      # lambda layers for branches and tags, not pull requests
+      - if test "$BUILD_TYPE" != "pr"; then bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/bin/arun.sh" lambda update "$CODEBUILD_SRC_DIR"; fi
       # publish on tag events - see https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
-      - "if [ \"$(echo \"$CODEBUILD_WEBHOOK_TRIGGER\" | awk -F / '{ print $1 }')\" = \"tag\" ]; then npm publish . --tag cicd; fi"
+      - if test "$BUILD_TYPE" = "tag"; then npm publish . --tag cicd; fi
