--- a/package.json
+++ b/package.json
@@ -15,34 +15,34 @@
     "gulpHelper.js"
   ],
   "devDependencies": {
-    "@types/jasmine": "^3.4.0",
-    "@types/node": "^6.14.7",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "express": "^4.17.1",
-    "gulp": "^4.0.2",
-    "gulp-debug": "^3.1.0",
-    "gulp-nunjucks-render": "^2.2.3",
-    "gulp-rename": "^1.4.0",
-    "gulp-rev": "^8.0.0",
-    "gulp-rev-replace": "^0.4.3",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-sequence": "^0.4.6",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^5.0.1",
-    "gulp-watch": "^5.0.1",
-    "jasmine": "^3.5.0",
-    "jasmine-core": "^3.4.0",
-    "karma": "^4.3.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-jasmine": "^2.0.1",
-    "marked": "^0.7.0",
-    "merge2": "^1.3.0",
-    "mkdirp": "^0.5.1",
-    "nunjucks": "^3.0.1",
-    "nunjucks-markdown": "^2.0.1",
-    "ts-custom-elements": "^1.0.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "@types/jasmine": "latest",
+    "@types/node": "latest",
+    "@webcomponents/webcomponentsjs": "latest",
+    "express": "latest",
+    "gulp": "latest",
+    "gulp-debug": "latest",
+    "gulp-nunjucks-render": "latest",
+    "gulp-rename": "latest",
+    "gulp-rev": "latest",
+    "gulp-rev-replace": "latest",
+    "gulp-rimraf": "latest",
+    "gulp-sequence": "latest",
+    "gulp-sourcemaps": "latest",
+    "gulp-typescript": "latest",
+    "gulp-watch": "latest",
+    "jasmine": "latest",
+    "jasmine-core": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "latest",
+    "karma-jasmine": "latest",
+    "marked": "latest",
+    "merge2": "latest",
+    "mkdirp": "latest",
+    "nunjucks": "latest",
+    "nunjucks-markdown": "latest",
+    "ts-custom-elements": "latest",
+    "tslint": "latest",
+    "typescript": "latest"
   },
   "bin": {
     "little-server": "./commonjs/bin/little-server.js"
