--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,10 +31,9 @@ phases:
     commands:
       - echo "CODEBUILD_WEBHOOK_TRIGGER == $CODEBUILD_WEBHOOK_TRIGGER"
       - git checkout -b "cicd-$CODEBUILD_WEBHOOK_TRIGGER"
-      - BUILD_TYPE="$(echo \"$CODEBUILD_WEBHOOK_TRIGGER\" | awk -F / '{ print $1 }')"
+      - BUILD_TYPE="$(echo $CODEBUILD_WEBHOOK_TRIGGER | awk -F / '{ print $1 }')"
       - echo "BUILD_TYPE is $BUILD_TYPE"
       # lambda layers for branches and tags, not pull requests
       - if test "$BUILD_TYPE" != "pr"; then bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/little.sh" lambda update "$CODEBUILD_SRC_DIR"; fi
       # publish on tag events - see https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
       - if test "$BUILD_TYPE" = "tag"; then npm publish . --tag cicd; fi
-
