chore(little-server): router module support

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,10 +30,11 @@ phases:
   post_build:
     commands:
       - echo "CODEBUILD_WEBHOOK_TRIGGER == $CODEBUILD_WEBHOOK_TRIGGER"
+      # checkout a branch, so lambda publish goes there
       - git checkout -b "cicd-$CODEBUILD_WEBHOOK_TRIGGER"
       - BUILD_TYPE="$(echo $CODEBUILD_WEBHOOK_TRIGGER | awk -F / '{ print $1 }')"
       - echo "BUILD_TYPE is $BUILD_TYPE"
-      # lambda layers for branches and tags, not pull requests
-      - if test "$BUILD_TYPE" != "pr"; then bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/little.sh" lambda update "$CODEBUILD_SRC_DIR"; fi
+      # publish lambda layers for pr's and tags
+      - if test "$BUILD_TYPE" = pr || test "$BUILD_TYPE" = tag; then bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/little.sh" lambda update "$CODEBUILD_SRC_DIR"; fi
       # publish on tag events - see https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
-      - if test "$BUILD_TYPE" = "tag"; then npm publish . --tag cicd; fi
+      - if test "$BUILD_TYPE" = tag; then npm publish . --tag cicd; fi
