--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bunyan": "^1.8.12",
     "font-awesome": "^4.7.0",
     "lit-html": "^1.1.2"
   },
