--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 10
+      nodejs: 12
     commands:
       - echo "Entered the install phase - jq already installed ..."
       #- apt-get update -y
@@ -35,6 +35,6 @@ phases:
       - BUILD_TYPE="$(echo $CODEBUILD_WEBHOOK_TRIGGER | awk -F / '{ print $1 }')"
       - echo "BUILD_TYPE is $BUILD_TYPE"
       # publish lambda layers for pr's and tags
-      - if test "$BUILD_TYPE" = pr || test "$BUILD_TYPE" = tag; then bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/little.sh" lambda update "$CODEBUILD_SRC_DIR"; fi
+      #- if test "$BUILD_TYPE" = pr || test "$BUILD_TYPE" = tag; then bash "$CODEBUILD_SRC_DIR_HELPERS/AWS/little.sh" lambda update "$CODEBUILD_SRC_DIR"; fi
       # publish on tag events - see https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-env-vars.html
-      - if test "$BUILD_TYPE" = tag; then npm publish . --tag cicd; fi
+      - if test "$BUILD_TYPE" = tag; then npm publish . --tag cicd --access public; fi
