--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "font-awesome": "^4.7.0",
     "i18next": "^19.7.0",
     "lit-html": "^1.2.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "purecss": "^2.0.3"
   },
   "files": [
     "README.md",
