--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@littleware/little-elements",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "commonjs",
   "description": "",
   "main": "index.js",
@@ -21,7 +21,7 @@
     "@webcomponents/webcomponentsjs": "latest"
   },
   "devDependencies": {
-    "@littleware/little-nodedev": "1.0.4",
+    "@littleware/little-nodedev": "latest",
     "@types/bunyan": "latest",
     "@types/express": "latest",
     "@types/jasmine": "latest",
