--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "i18next": "^19.7.0",
     "lit-html": "^1.4.1",
     "node-fetch": "^2.6.1",
-    "purecss": "^2.0.6",
-    "@webcomponents/webcomponentsjs": "latest"
+    "purecss": "^2.0.6"
   },
   "devDependencies": {
     "@littleware/little-nodedev": "latest",
